--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <span id="result"></span>
         <footer>
 
-            © This Calculator belongs to --Hunter Quinn--
+            © Everyone Can Get Rich
     
     
     </footer>
